check out code to get script before deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,6 +156,7 @@ jobs:
     docker:
       - image: circleci/ruby:2.4.1
     steps:
+      - checkout
       - run:
           name: deploy
           command: |
