--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,57 +96,62 @@ jobs:
           working_directory: ./controller
           command: bash <(curl -s https://codecov.io/bash)
   build-push-controller-image:
-    docker:
-      - image: circleci/golang:1.13.11
+    machine:
+      image: ubuntu-2004:202008-01
     steps:
       - checkout
-      - setup_remote_docker
       - run:
-          name: Build Docker image
+          name: Build & Push Controller image
           working_directory: ./controller
-          command: docker build -t kalmhq/kalm-controller:latest .
-      - run:
-          name: Publish Docker Image to DOCKER HUB
           command: |
+            # enable buildx
+            export DOCKER_CLI_EXPERIMENTAL=enabled
+            # use driver: docker-container
+            docker buildx create --name mybuilder --use
             echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+            docker buildx build \
+              --output=type=docker \
+              --cache-from=type=registry,ref=kalmhq/kalm-controller:$CIRCLE_BRANCH-cache \
+              --cache-to=type=registry,ref=kalmhq/kalm-controller:$CIRCLE_BRANCH-cache,mode=max \
+              -t kalmhq/kalm-controller:latest .
+            docker tag  kalmhq/kalm-controller:latest kalmhq/kalm-controller:$CIRCLE_SHA1
             docker push kalmhq/kalm-controller:latest
-            docker tag kalmhq/kalm-controller:latest kalmhq/kalm-controller:$CIRCLE_SHA1
             docker push kalmhq/kalm-controller:$CIRCLE_SHA1
-            TAG=$(git tag --points-at HEAD)
-
-            if [ "$TAG" != "" ]
+            if [ "$CIRCLE_TAG" != "" ]
             then
-              docker tag kalmhq/kalm-controller:latest kalmhq/kalm-controller:$TAG
-              docker push kalmhq/kalm-controller:$TAG
+              docker tag kalmhq/kalm-controller:latest kalmhq/kalm-controller:$CIRCLE_TAG
+              docker push kalmhq/kalm-controller:$CIRCLE_TAG
             fi
   build-push-operator-image:
-    docker:
-      - image: circleci/golang:1.13.11
+    machine:
+      image: ubuntu-2004:202008-01
     steps:
       - checkout
-      - setup_remote_docker
       - run:
           name: cp controller
           working_directory: ./operator
           command: cp -r ../controller .
       - run:
-          name: Build Docker image
-          working_directory: ./operator
-          command: docker build -t kalmhq/kalm-operator:latest .
-      - run:
-          name: Publish Docker Image to Docker Hub
+          name: Build & Publish Operator Image
           working_directory: ./operator
           command: |
+            # enable buildx
+            export DOCKER_CLI_EXPERIMENTAL=enabled
+            # use driver: docker-container
+            docker buildx create --name mybuilder --use
             echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+            docker buildx build \
+              --output=type=docker \
+              --cache-from=type=registry,ref=kalmhq/kalm-operator:$CIRCLE_BRANCH-cache \
+              --cache-to=type=registry,ref=kalmhq/kalm-operator:$CIRCLE_BRANCH-cache,mode=max \
+              -t kalmhq/kalm-operator:latest .
+            docker tag  kalmhq/kalm-operator:latest kalmhq/kalm-operator:$CIRCLE_SHA1
             docker push kalmhq/kalm-operator:latest
-            docker tag kalmhq/kalm-operator:latest kalmhq/kalm-operator:$CIRCLE_SHA1
             docker push kalmhq/kalm-operator:$CIRCLE_SHA1
-
-            TAG=$(git tag --points-at HEAD)
-            if [ "$TAG" != "" ]
+            if [ "$CIRCLE_TAG" != "" ]
             then
-              docker tag kalmhq/kalm-operator:latest kalmhq/kalm-operator:$TAG
-              docker push kalmhq/kalm-operator:$TAG
+              docker tag kalmhq/kalm-operator:latest kalmhq/kalm-operator:$CIRCLE_TAG
+              docker push kalmhq/kalm-operator:$CIRCLE_TAG
             fi
   #deploy-dashboard:
   #  executor: deploy-orb/default
