update auth-proxy cookie policy

--- a/controller/config/rbac/role_binding.yaml
+++ b/controller/config/rbac/role_binding.yaml
@@ -36,3 +36,6 @@ subjects:
   - kind: ServiceAccount
     name: default
     namespace: system
+  - kind: ServiceAccount
+    name: component-kalm
+    namespace: system
