--- a/controller/config/crd/bases/core.kalm.dev_protectedendpoints.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_protectedendpoints.yaml
@@ -57,6 +57,10 @@ spec:
                 format: int32
                 type: integer
               type: array
+            tenants:
+              items:
+                type: string
+              type: array
             type:
               enum:
               - Port
