--- a/controller/config/crd/kustomization.yaml
+++ b/controller/config/crd/kustomization.yaml
@@ -2,23 +2,24 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-- bases/core.kalm.dev_accesstokens.yaml
-- bases/core.kalm.dev_components.yaml
-- bases/core.kalm.dev_componentplugins.yaml
-- bases/core.kalm.dev_componentpluginbindings.yaml
-#- bases/core.kalm.dev_componenttemplates.yaml
-#- bases/core.kalm.dev_dependencies.yaml
-- bases/core.kalm.dev_httpscertissuers.yaml
-- bases/core.kalm.dev_httpscerts.yaml
-- bases/core.kalm.dev_dockerregistries.yaml
-- bases/core.kalm.dev_httproutes.yaml
-- bases/core.kalm.dev_singlesignonconfigs.yaml
-- bases/core.kalm.dev_protectedendpoints.yaml
-- bases/core.kalm.dev_deploykeys.yaml
-- bases/core.kalm.dev_acmeservers.yaml
-- bases/core.kalm.dev_logsystems.yaml
-- bases/core.kalm.dev_rolebindings.yaml
-- bases/core.kalm.dev_tenants.yaml
+  - bases/core.kalm.dev_accesstokens.yaml
+  - bases/core.kalm.dev_components.yaml
+  - bases/core.kalm.dev_componentplugins.yaml
+  - bases/core.kalm.dev_componentpluginbindings.yaml
+  #- bases/core.kalm.dev_componenttemplates.yaml
+  #- bases/core.kalm.dev_dependencies.yaml
+  - bases/core.kalm.dev_httpscertissuers.yaml
+  - bases/core.kalm.dev_httpscerts.yaml
+  - bases/core.kalm.dev_dockerregistries.yaml
+  - bases/core.kalm.dev_httproutes.yaml
+  - bases/core.kalm.dev_singlesignonconfigs.yaml
+  - bases/core.kalm.dev_protectedendpoints.yaml
+  - bases/core.kalm.dev_deploykeys.yaml
+  - bases/core.kalm.dev_acmeservers.yaml
+  - bases/core.kalm.dev_logsystems.yaml
+  - bases/core.kalm.dev_rolebindings.yaml
+  - bases/core.kalm.dev_tenants.yaml
+  - bases/core.kalm.dev_dnsrecords.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -60,4 +61,4 @@ patchesStrategicMerge:
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
 configurations:
-- kustomizeconfig.yaml
+  - kustomizeconfig.yaml
