enable podsecuritypolicies for clusterRole: kalm-operator

--- a/kalm-install-operator.yaml
+++ b/kalm-install-operator.yaml
@@ -346,6 +346,7 @@ rules:
       - policy
     resources:
       - poddisruptionbudgets*
+      - podsecuritypolicies
     verbs:
       - '*'
   - apiGroups:
