1. to avoid hit limit when testing, by default use test api from letsencrypt for cert issuing 2. clean code: lowercase package name

--- a/operator/config/crd/bases/install.kalm.dev_kalmoperatorconfigs.yaml
+++ b/operator/config/crd/bases/install.kalm.dev_kalmoperatorconfigs.yaml
@@ -37,8 +37,12 @@ spec:
             controller:
               description: Controller Config
               properties:
+                useLetsencryptProductionAPI:
+                  type: boolean
                 version:
                   type: string
+              required:
+              - useLetsencryptProductionAPI
               type: object
             dashboard:
               description: Dashboard Config
