only saas version needs scope: tenants in auth-proxy

--- a/controller/config/crd/bases/core.kalm.dev_singlesignonconfigs.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_singlesignonconfigs.yaml
@@ -81,6 +81,8 @@ spec:
             idTokenExpirySeconds:
               format: int32
               type: integer
+            isKalmInLocalMode:
+              type: boolean
             issuer:
               description: These two are for arbitrary oidc provider
               type: string
