fill logic for ClusterResourceQuotaReconciler

--- a/controller/config/rbac/role.yaml
+++ b/controller/config/rbac/role.yaml
@@ -207,6 +207,26 @@ rules:
 - apiGroups:
   - core.kalm.dev
   resources:
+  - clusterresourcequota
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - core.kalm.dev
+  resources:
+  - clusterresourcequota/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - core.kalm.dev
+  resources:
   - componentpluginbindings
   verbs:
   - create
