--- a/controller/config/samples/core_v1alpha1_clusterresourcequota.yaml
+++ b/controller/config/samples/core_v1alpha1_clusterresourcequota.yaml
@@ -3,16 +3,18 @@ kind: ClusterResourceQuota
 metadata:
   name: kalm-cluster-resource-quota
 spec:
-  cpu: "1"
-  memory: "1Gi"
-  storage: "1Gi"
-  ephemeralStorage: "1Gi"
-  traffic: "1Gi"
-  applicationsCount: "100"
-  componentsCount: "100"
-  servicesCount: "100"
-  roleBindingCount: "100"
-  accessTokens: "100"
-  dockerRegistriesCount: "100"
-  httpRoutesCount: "100"
-  httpsCertsCount: "100"
+  resourceQuota:
+    cpu: "10"
+    memory: "100Gi"
+    storage: "100Gi"
+    ephemeralStorage: "100Gi"
+    traffic: "100Gi"
+    applicationsCount: "10000"
+    componentsCount: "10000"
+    servicesCount: "10000"
+    roleBindingCount: "10000"
+    accessTokens: "10000"
+    dockerRegistriesCount: "10000"
+    httpRoutesCount: "10000"
+    httpsCertsCount: "10000"
+    tenantsCount: "10000"
