add tenant printcolumn

--- a/controller/config/crd/bases/core.kalm.dev_singlesignonconfigs.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_singlesignonconfigs.yaml
@@ -13,6 +13,9 @@ spec:
     description: Domain of dex
     name: Domain
     type: string
+  - JSONPath: .spec.issuer
+    name: Issuer
+    type: string
   group: core.kalm.dev
   names:
     kind: SingleSignOnConfig
