--- a/controller/config/crd/bases/core.kalm.dev_accesstokens.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_accesstokens.yaml
@@ -9,6 +9,9 @@ metadata:
   name: accesstokens.core.kalm.dev
 spec:
   additionalPrinterColumns:
+  - JSONPath: .metadata.labels.tenant
+    name: Tenant
+    type: string
   - JSONPath: .metadata.labels.tokenType
     name: Type
     type: string
