--- a/controller/config/crd/bases/core.kalm.dev_components.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_components.yaml
@@ -9,6 +9,9 @@ metadata:
   name: components.core.kalm.dev
 spec:
   additionalPrinterColumns:
+  - JSONPath: .metadata.labels.tenant
+    name: Tenant
+    type: string
   - JSONPath: .spec.workloadType
     name: Workload
     type: string
