--- a/controller/config/crd/bases/core.kalm.dev_dockerregistries.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_dockerregistries.yaml
@@ -9,6 +9,9 @@ metadata:
   name: dockerregistries.core.kalm.dev
 spec:
   additionalPrinterColumns:
+  - JSONPath: .metadata.labels.tenant
+    name: Tenant
+    type: string
   - JSONPath: .spec.host
     description: Host of the registry
     name: Host
