--- a/controller/config/crd/bases/core.kalm.dev_httproutes.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_httproutes.yaml
@@ -9,6 +9,9 @@ metadata:
   name: httproutes.core.kalm.dev
 spec:
   additionalPrinterColumns:
+  - JSONPath: .metadata.labels.tenant
+    name: Tenant
+    type: string
   - JSONPath: .spec.hosts
     name: Hosts
     type: string
