--- a/controller/config/crd/bases/core.kalm.dev_httpscerts.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_httpscerts.yaml
@@ -9,6 +9,9 @@ metadata:
   name: httpscerts.core.kalm.dev
 spec:
   additionalPrinterColumns:
+  - JSONPath: .metadata.labels.tenant
+    name: Tenant
+    type: string
   - JSONPath: .status.conditions[0].status
     name: Ready
     type: string
