--- a/controller/config/crd/bases/core.kalm.dev_protectedendpoints.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_protectedendpoints.yaml
@@ -9,6 +9,9 @@ metadata:
   name: protectedendpoints.core.kalm.dev
 spec:
   additionalPrinterColumns:
+  - JSONPath: .metadata.labels.tenant
+    name: Tenant
+    type: string
   - JSONPath: .spec.type
     name: Type
     type: string
