deploy branch cert

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -258,7 +258,7 @@ workflows:
               only:
                 - master
                 - multiple-tenancy
-                # - local-mode
+                - cert
             tags:
               only: /^v.*/
       - deploy-dashboard:
@@ -270,7 +270,7 @@ workflows:
               only:
                 - master
                 - multiple-tenancy
-                # - local-mode
+                - cert
       #- deploy-auth-proxy:
       #    context: deploy-demo-cluster
       #    requires:
@@ -304,7 +304,7 @@ workflows:
               only:
                 - master
                 - multiple-tenancy
-                # - local-mode
+                - cert
             tags:
               only: /^v.*/
       - deploy-controller:
@@ -316,7 +316,7 @@ workflows:
               only:
                 - master
                 - multiple-tenancy
-                # - local-mode
+                - cert
   operator:
     jobs:
       - build-push-operator-image:
@@ -326,7 +326,7 @@ workflows:
               only:
                 - master
                 - multiple-tenancy
-                # - local-mode
+                - cert
             tags:
               only: /^v.*/
       - hold:
@@ -348,4 +348,4 @@ workflows:
               only:
                 - master
                 - multiple-tenancy
-                # - local-mode
+                - cert
