--- a/controller/config/crd/kustomization.yaml
+++ b/controller/config/crd/kustomization.yaml
@@ -20,6 +20,7 @@ resources:
   - bases/core.kalm.dev_rolebindings.yaml
   - bases/core.kalm.dev_tenants.yaml
   - bases/core.kalm.dev_clusterresourcequotas.yaml
+- bases/core.kalm.dev_domains.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -40,6 +41,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_deploykeys.yaml
 #- patches/webhook_in_acmeservers.yaml
 #- patches/webhook_in_clusterresourcequota.yaml
+#- patches/webhook_in_domains.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -59,6 +61,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_deploykeys.yaml
 #- patches/cainjection_in_acmeservers.yaml
 #- patches/cainjection_in_clusterresourcequota.yaml
+#- patches/cainjection_in_domains.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
