--- a/controller/config/rbac/role.yaml
+++ b/controller/config/rbac/role.yaml
@@ -307,6 +307,26 @@ rules:
 - apiGroups:
   - core.kalm.dev
   resources:
+  - domains
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - core.kalm.dev
+  resources:
+  - domains/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - core.kalm.dev
+  resources:
   - httproutes
   verbs:
   - create
