--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,15 +6,9 @@
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.46",
-    "@rjsf/core": "^2.0.0",
-    "@rjsf/material-ui": "^2.0.0",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
     "@types/chart.js": "^2.9.16",
     "@types/debug": "^4.1.5",
-    "@types/enzyme": "^3.10.5",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^24.0.25",
     "@types/lodash": "^4.14.161",
     "@types/node": "^12.12.24",
@@ -25,7 +19,6 @@
     "@types/react-final-form-listeners": "^1.0.0",
     "@types/react-redux": "^7.1.6",
     "@types/react-router-dom": "^5.1.3",
-    "@types/react-syntax-highlighter": "^11.0.4",
     "@types/redux-logger": "^3.0.8",
     "@types/storybook__addon-actions": "^5.2.1",
     "@types/storybook__addon-links": "^5.2.1",
@@ -36,12 +29,9 @@
     "chart.js": "^2.9.3",
     "connected-react-router": "^6.8.0",
     "copy-to-clipboard": "^3.3.1",
-    "customize-cra": "^1.0.0",
     "date-fns": "^2.11.1",
     "debug": "^4.1.1",
     "driver.js": "^0.9.8",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
     "expression-eval": "^3.1.2",
     "final-form": "^4.20.1",
     "final-form-arrays": "^3.0.2",
@@ -50,13 +40,12 @@
     "immer": "^7.0.8",
     "lodash": "^4.17.20",
     "material-ui-popup-state": "^1.6.1",
-    "node-forge": "^0.9.1",
+    "node-forge": "^0.10.0",
     "notistack": "^0.9.7",
     "perfect-scrollbar": "^1.5.0",
     "qs": "^6.9.4",
     "react": "^16.12.0",
     "react-ace": "^8.0.0",
-    "react-app-rewired": "^2.1.6",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-final-form": "^6.5.1",
@@ -64,8 +53,7 @@
     "react-final-form-listeners": "^1.0.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.3",
-    "react-syntax-highlighter": "^12.2.1",
+    "react-scripts": "4.0.1",
     "react-table": "^7.5.0",
     "reconnecting-websocket": "^4.4.0",
     "redux-logger": "^3.0.6",
@@ -79,10 +67,10 @@
     "yup": "^0.29.3"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "lint": "eslint -c .eslintrc.json --ext tx,tsx src --max-warnings 0",
     "storybook-dev": "NODE_ENV=test start-storybook -p 9009 -s public",
     "storybook": "NODE_ENV=test start-storybook --docs -p 9009 -s public",
@@ -99,11 +87,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "^@apiType(.*)$": "<rootDir>/src/api/mockApi$1"
-    }
   },
   "devDependencies": {
     "@storybook/addon-a11y": "^5.3.19",
