--- a/controller/config/crd/bases/core.kalm.dev_domains.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_domains.yaml
@@ -56,6 +56,7 @@ spec:
               type: integer
           required:
           - checkCountSinceCNAMEReadyUpdated
+          - cnameReady
           - lastCheckTimestamp
           type: object
       type: object
