--- a/controller/config/crd/bases/core.kalm.dev_httproutes.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_httproutes.yaml
@@ -24,7 +24,7 @@ spec:
     listKind: HttpRouteList
     plural: httproutes
     singular: httproute
-  scope: Namespaced
+  scope: Cluster
   subresources:
     status: {}
   validation:
