add cloudflare config in kalmoperatorconfig
pass to controller using ENV, better with configMap & secret?

--- a/operator/config/crd/bases/install.kalm.dev_kalmoperatorconfigs.yaml
+++ b/operator/config/crd/bases/install.kalm.dev_kalmoperatorconfigs.yaml
@@ -40,6 +40,15 @@ spec:
             baseDNSDomain:
               description: 'like: asia-northeast3.kalm-dns.com'
               type: string
+            cloudflareConfig:
+              properties:
+                apiToken:
+                  type: string
+                domainToZoneIDConfig:
+                  additionalProperties:
+                    type: string
+                  type: object
+              type: object
             controller:
               description: Controller Config
               properties:
