--- a/controller/config/crd/bases/core.kalm.dev_domains.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_domains.yaml
@@ -9,6 +9,18 @@ metadata:
   name: domains.core.kalm.dev
 spec:
   additionalPrinterColumns:
+  - JSONPath: .metadata.labels.tenant
+    name: Tenant
+    type: string
+  - JSONPath: .spec.domain
+    name: Domain
+    type: string
+  - JSONPath: .spec.dnsType
+    name: DNSType
+    type: string
+  - JSONPath: .status.isDNSTargetConfigured
+    name: IsDNSTargetConfigured
+    type: string
   - JSONPath: .metadata.creationTimestamp
     name: Age
     type: date
