--- a/operator/config/crd/bases/install.kalm.dev_kalmoperatorconfigs.yaml
+++ b/operator/config/crd/bases/install.kalm.dev_kalmoperatorconfigs.yaml
@@ -52,6 +52,8 @@ spec:
             controller:
               description: Controller Config
               properties:
+                externalDNSServerIP:
+                  type: string
                 useLetsencryptProductionAPI:
                   type: boolean
                 version:
