add tenant label: global for kalm-system

--- a/controller/config/manager/manager-ns.yaml
+++ b/controller/config/manager/manager-ns.yaml
@@ -6,4 +6,5 @@ metadata:
     kalm-enabled: "true"
     istio-injection: enabled
     kalm-control-plane: "true"
+    tenant: global
   name: system
