parse physical cluster id to auth-proxy

--- a/operator/config/crd/bases/install.kalm.dev_kalmoperatorconfigs.yaml
+++ b/operator/config/crd/bases/install.kalm.dev_kalmoperatorconfigs.yaml
@@ -89,6 +89,8 @@ spec:
             kalmVersion:
               description: deprecated
               type: string
+            physicalClusterId:
+              type: string
             skipCertManagerInstallation:
               type: boolean
             skipIstioInstallation:
