--- a/controller/config/crd/bases/core.kalm.dev_components.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_components.yaml
@@ -100,6 +100,11 @@ spec:
             image:
               minLength: 1
               type: string
+            immediateTrigger:
+              description: This is only meaningful if this component is a cronjob
+                workload. Controller should immediately trigger a job and set its
+                value to false if it's true.
+              type: boolean
             istioResourceRequirements:
               description: ResourceRequirements describes the compute resource requirements.
               properties:
