--- a/controller/config/crd/bases/core.kalm.dev_domains.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_domains.yaml
@@ -57,10 +57,14 @@ spec:
               type: string
             domain:
               type: string
+            dsnTargetReadyToCheck:
+              type: boolean
             isKalmBuiltinDomain:
               type: boolean
             txt:
               type: string
+            txtReadyToCheck:
+              type: boolean
           required:
           - isKalmBuiltinDomain
           type: object
