--- a/operator/config/crd/bases/install.kalm.dev_kalmoperatorconfigs.yaml
+++ b/operator/config/crd/bases/install.kalm.dev_kalmoperatorconfigs.yaml
@@ -92,9 +92,16 @@ spec:
             kalmVersion:
               description: deprecated
               type: string
-            oidcIssuerURL:
-              description: 'like: https://staging.kalm.dev/oidc'
-              type: string
+            oidcIssuer:
+              properties:
+                clientId:
+                  type: string
+                clientSecret:
+                  type: string
+                issuerURL:
+                  description: 'like: https://staging.kalm.dev/oidc'
+                  type: string
+              type: object
             physicalClusterId:
               type: string
             skipCertManagerInstallation:
