--- a/controller/config/crd/bases/core.kalm.dev_acmeservers.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_acmeservers.yaml
@@ -8,6 +8,10 @@ metadata:
   creationTimestamp: null
   name: acmeservers.core.kalm.dev
 spec:
+  additionalPrinterColumns:
+  - JSONPath: .metadata.creationTimestamp
+    name: Age
+    type: date
   group: core.kalm.dev
   names:
     kind: ACMEServer
