--- a/controller/config/crd/bases/core.kalm.dev_httproutes.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_httproutes.yaml
@@ -18,6 +18,9 @@ spec:
   - JSONPath: .spec.paths
     name: Paths
     type: string
+  - JSONPath: .metadata.creationTimestamp
+    name: Age
+    type: date
   group: core.kalm.dev
   names:
     kind: HttpRoute
