--- a/controller/config/crd/bases/core.kalm.dev_protectedendpoints.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_protectedendpoints.yaml
@@ -15,6 +15,9 @@ spec:
   - JSONPath: .spec.type
     name: Type
     type: string
+  - JSONPath: .metadata.creationTimestamp
+    name: Age
+    type: date
   group: core.kalm.dev
   names:
     kind: ProtectedEndpoint
