--- a/operator/config/crd/bases/install.kalm.dev_kalmoperatorconfigs.yaml
+++ b/operator/config/crd/bases/install.kalm.dev_kalmoperatorconfigs.yaml
@@ -34,22 +34,26 @@ spec:
         spec:
           description: KalmOperatorConfigSpec defines the desired state of KalmOperatorConfig
           properties:
-            baseAppDomain:
-              description: 'like: us-west1-1.clusters.kalm-apps.com'
-              type: string
-            baseDNSDomain:
-              description: 'like: us-west1-1.clusters.kalm-dns.com'
-              type: string
-            baseDashboardDomain:
-              description: 'like: us-west1-1.kalm.dev'
-              type: string
-            cloudflareConfig:
+            byocModeConfig:
               properties:
-                apiToken:
+                baseAppDomain:
+                  description: 'like: foobar.byoc-clusters.kalm-apps.com'
                   type: string
-                domainToZoneIDConfig:
-                  additionalProperties:
-                    type: string
+                baseDNSDomain:
+                  description: 'like: foobar.byoc-clusters.kalm-dns.com'
+                  type: string
+                baseDashboardDomain:
+                  description: 'like: foobar.byoc.kalm.dev'
+                  type: string
+                oidcIssuer:
+                  properties:
+                    clientId:
+                      type: string
+                    clientSecret:
+                      type: string
+                    issuerURL:
+                      description: 'like: https://staging.kalm.dev/oidc'
+                      type: string
                   type: object
               type: object
             controller:
@@ -88,29 +92,52 @@ spec:
                   type: string
               type: object
             kalmType:
-              type: string
-            kalmVersion:
               description: deprecated
               type: string
-            oidcIssuer:
-              properties:
-                clientId:
-                  type: string
-                clientSecret:
-                  type: string
-                issuerURL:
-                  description: 'like: https://staging.kalm.dev/oidc'
-                  type: string
+            kalmVersion:
+              description: deprecated, use Version instead
+              type: string
+            localModeConfig:
               type: object
             physicalClusterId:
               type: string
+            saasModeConfig:
+              properties:
+                baseAppDomain:
+                  description: 'like: us-west1-1.clusters.kalm-apps.com'
+                  type: string
+                baseDNSDomain:
+                  description: 'like: us-west1-1.clusters.kalm-dns.com'
+                  type: string
+                baseDashboardDomain:
+                  description: 'like: us-west1-1.kalm.dev'
+                  type: string
+                cloudflareConfig:
+                  properties:
+                    apiToken:
+                      type: string
+                    domainToZoneIDConfig:
+                      additionalProperties:
+                        type: string
+                      type: object
+                  type: object
+                oidcIssuer:
+                  properties:
+                    clientId:
+                      type: string
+                    clientSecret:
+                      type: string
+                    issuerURL:
+                      description: 'like: https://staging.kalm.dev/oidc'
+                      type: string
+                  type: object
+              type: object
             skipCertManagerInstallation:
               type: boolean
             skipIstioInstallation:
               type: boolean
-            skipKalmControllerInstallation:
-              type: boolean
             skipKalmDashboardInstallation:
+              description: SkipKalmControllerInstallation bool `json:"skipKalmControllerInstallation,omitempty"`
               type: boolean
             version:
               type: string
