--- a/operator/config/crd/bases/install.kalm.dev_kalmoperatorconfigs.yaml
+++ b/operator/config/crd/bases/install.kalm.dev_kalmoperatorconfigs.yaml
@@ -55,6 +55,8 @@ spec:
                       description: 'like: https://staging.kalm.dev/oidc'
                       type: string
                   type: object
+                owner:
+                  type: string
               type: object
             controller:
               description: Controller Config
