--- a/controller/config/crd/kustomization.yaml
+++ b/controller/config/crd/kustomization.yaml
@@ -21,6 +21,7 @@ resources:
 - bases/core.kalm.dev_tenants.yaml
 - bases/core.kalm.dev_clusterresourcequotas.yaml
 - bases/core.kalm.dev_domains.yaml
+- bases/core.kalm.dev_dnsrecords.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -42,6 +43,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_acmeservers.yaml
 #- patches/webhook_in_clusterresourcequota.yaml
 #- patches/webhook_in_domains.yaml
+#- patches/webhook_in_dnsrecords.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -62,6 +64,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_acmeservers.yaml
 #- patches/cainjection_in_clusterresourcequota.yaml
 #- patches/cainjection_in_domains.yaml
+#- patches/cainjection_in_dnsrecords.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
